--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-从零开始
+<!DOCTYPE html>        <!-- 声明文档。定义html -->
+<html lang="en">         <!-- 元素是页面的根元素 -->
+<head>                     <!-- 元素包含文档的元数据 -->
+    <meta charset="UTF-8">   <!-- 定义网页编码格式 -->
+    <title>myjs</title>  <!-- 元素描述了文档的标题-->
+</head>
+<body><!--元素包含了页面可以看见的内容。定义文档主体。-->
+<p>这个p是段落。可以把很多文字放到里面去。比如这是一段文字。</p>
+<p>这是另一个段落。</p>
+<h1>静夜思</h1><!-- 通过<h1>-<h6>标签来定义 -->
+<hr><!--定义水平线-->
+
+<p>床前明月光</p>
+<p>疑是地上霜</p>
+<p>举头望明月</p>
+<p>低头思故乡</p>
+
+<p>图片</p>
+<a href="www.baidu.com">百度链接</a>  <!--<a>标签来定义。在 href 属性中指定链接的地址。-->
+<br><!--换行-->
+<img src="https://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=%E5%9B%BE%E7%89%87&hs=0&pn=9&spn=0&di=95810&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&ie=utf-8&oe=utf-8&cl=2&lm=-1&cs=3445578133%2C3485963344&os=48205814%2C933618450&simid=4246282164%2C688322415&adpicid=0&lpn=0&ln=30&fr=ala&fm=&sme=&cg=&bdtype=0&oriquery=%E5%9B%BE%E7%89%87&objurl=https%3A%2F%2Fgimg2.baidu.com%2Fimage_search%2Fsrc%3Dhttp%3A%2F%2Fimg.jj20.com%2Fup%2Fallimg%2Ftp06%2F2006292003305493-0-lp.jpg%26refer%3Dhttp%3A%2F%2Fimg.jj20.com%26app%3D2002%26size%3Df9999%2C10000%26q%3Da80%26n%3D0%26g%3D0n%26fmt%3Djpeg%3Fsec%3D1637936525%26t%3D2cbb075272ecd70859021a03c486e20c&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3B33da_z%26e3Bv54AzdH3FprAzdH3Fdc80db_z%26e3Bip4s&gsm=2&islist=&querylist=&dyTabStr=MCwzLDYsMSw0LDIsNSw3LDgsOQ%3D%3D" alt="" width="500" height="500">   <!--图像是通过标签 <img> 来定义的。 -->
+<hr>
+
+</body>
+</html>
