--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -5,7 +5,7 @@
     <title>myjs</title>  <!-- 元素描述了文档的标题-->
 </head>
 <body><!--元素包含了页面可以看见的内容。定义文档主体。-->
-<img src="./images/libai.jpeg/>
+<img src="./images/libai.jpeg"/>
 <h1>静夜思</h1><!-- 通过<h1>-<h6>标签来定义 -->
 <hr><!--定义水平线-->
 <p>床前明月光</p>
