--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>myjs</title>  <!-- 元素描述了文档的标题-->
 </head>
 <body><!--元素包含了页面可以看见的内容。定义文档主体。-->
+    
+<img src="libai.jpeg"/>
 
 <h1>静夜思</h1><!-- 通过<h1>-<h6>标签来定义 -->
 <hr><!--定义水平线-->
