--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -3,18 +3,29 @@
 <head>                     <!-- 元素包含文档的元数据 -->
     <meta charset="UTF-8">   <!-- 定义网页编码格式 -->
     <title>myjs</title>  <!-- 元素描述了文档的标题-->
+    <style type="text/css">
+        body{
+            background-image:url("./images/libai.jpeg");
+            background-size: 100% 100%;
+            height:100%;
+        }
+        html{
+            height:100%;
+        }
+    </style>
 </head>
 <body><!--元素包含了页面可以看见的内容。定义文档主体。-->
-    
-<img src="./images/libai.jpeg"/>
+
 
 <h1>静夜思</h1><!-- 通过<h1>-<h6>标签来定义 -->
-<hr><!--定义水平线-->
 
-<p>床前明月光</p>
-<p>疑是地上霜</p>
-<p>举头望明月</p>
-<p>低头思故乡</p>
+<p>床前明月光,</p>
+
+<p>疑是地上霜.</p>
+
+<p>举头望明月,</p>
+
+<p>低头思故乡.</p>
 
 </body>
 </html>
