--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -13,18 +13,18 @@
             height:100%;
         }
         @keyframes myfirst {
-            0%   {background-color:red;  font-size: 20px;left:0px; top:0px;}
-            25%  {background-color:yellow;  font-size: 30px;left:200px; top:0px;}
-            50%  {background-color:blue;  font-size: 40px;left:200px; top:200px;}
-            75%  {background-color:green; font-size: 30px;left:0px; top:200px;}
-            100% {background-color:red;  font-size: 10px;left:0px; top:0px;}
+            0%   {background-color:red; opacity: 0; font-size: 20px;left:0px; top:0px;}
+            25%  {background-color:yellow; opacity: 10; font-size: 30px;left:200px; top:0px;}
+            50%  {background-color:blue;opacity: 30; font-size: 40px;left:200px; top:200px;}
+            75%  {background-color:green;opacity: 60; font-size: 30px;left:0px; top:200px;}
+            100% {background-color:red;opacity: 100;  font-size: 10px;left:0px; top:0px;}
         }
         h1,p{
             width: 200px;
             height: 85px;
             position: relative;
             animation-name:myfirst;
-            animation-duration: 4s;
+            animation-duration: 10s;
             animation-iteration-count: infinite;
         }
     </style>
