--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -28,11 +28,14 @@
         }
     </style>
 
-
 </head>
 <body><!--元素包含了页面可以看见的内容。定义文档主体。-->
 
-
+<audio controls="controls" autoplay="autoplay">
+    <source src="bgm/su.ogg" type="audio/ogg" />
+    <source src="bgm/su.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+</audio>
 <h1>静夜思</h1><!-- 通过<h1>-<h6>标签来定义 -->
 <hr><!--定义水平线-->
 <p>床前明月光</p>
