--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -31,7 +31,7 @@
 </head>
 <body><!--元素包含了页面可以看见的内容。定义文档主体。-->
 
-<audio controls="controls" autoplay="autoplay">
+<audio controls="controls" autoplay="autoplay" loop="loop">
     <source src="bgm/miss.ogg" type="audio/ogg" />
     <source src="bgm/miss.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
