--- a/001Basics/page.html
+++ b/001Basics/page.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/page.css" />
+    <script>
+        function audioAutoPlay(id) {
+        var audio = document.getElementById(id);
+        audio.play();
+        document.addEventListener("WeixinJSBridgeReady", function () {
+        audio.play();
+        }, false);
+        document.addEventListener("WeixinJSBridgeReady", function () {
+            audio.play();
+        }, false);
+        }
+    </script>
 </head>
 <body>
 
