--- a/001Basics/libai.html
+++ b/001Basics/libai.html
@@ -69,11 +69,23 @@
         }
 
     </style>
+    <script>
+        function audioAutoPlay(id) {
+            var audio = document.getElementById(id);
+            audio.play();
+            document.addEventListener("WeixinJSBridgeReady", function () {
+                audio.play();
+            }, false);
+            document.addEventListener("WeixinJSBridgeReady", function () {
+                audio.play();
+            }, false);
+        }
+    </script>
 
 </head>
-<body><!--元素包含了页面可以看见的内容。定义文档主体。-->
+<body onlode="audioAutoPlay(bgm)"><!--元素包含了页面可以看见的内容。定义文档主体。-->
 
-<audio  autoplay="autoplay" loop="loop">
+<audio id="bgm" autoplay="autoplay" loop="loop">
     <source src="bgm/miss.ogg" type="audio/ogg" />
     <source src="bgm/miss.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
