--- a/002Console/alert.html
+++ b/002Console/alert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="js/alert.js">
+    <script src="https://22twq.github.io/myjs/002Console/alert.html">
     </script>
 </head>
 <body>
